# matrix

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: matrix.hpp
test/: test-matrix.cc
